# actix_i18n

./: Cargo.toml  default.nix  derivation.nix
src/: lib.rs  with_actix.rs
